--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.17",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
     "apollo-server": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
