--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index",
+    "start": "node ./dist/app",
     "compile": "tsc -w",
-    "dev": "nodemon ./dist/index",
+    "dev": "nodemon ./dist/app",
     "test": "jest --watchAll"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.0",
     "apollo-server": "^3.11.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
